--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.6.8",
     "nuxt": "^3.11.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
